--- a/Robocup/Robocup/templates/admin.html
+++ b/Robocup/Robocup/templates/admin.html
@@ -16,9 +16,14 @@
         Введите город в котором будет проводится мероприятие:<br>
         {{form.Sity(size=80, class_="form-control")}}<br>
     </p>
+                <p>
+        Введите адрес мероприятия:<br>
+        {{form.Adress(size=80, class_="form-control")}}<br>
+    </p>
+         
             <p>
         Введите информацию о мероприятии<br>
-        {{form.Description(size=80, class_="form-control")}}<br>
+        {{form.Desc(size=200, class_="form-control")}}<br>
     </p>
             <p>
         Страну, в которой будет проходить мероприяти<br>
