--- a/Robocup/Robocup/templates/event_calendar.html
+++ b/Robocup/Robocup/templates/event_calendar.html
@@ -8,11 +8,35 @@ color:#333;    }
 <div class="row">
   <div class="col-4" style="text-align: center; font-size:large;">
     <div class="list-group" id="list-tab" role="tablist">
-      <a class="list-group-item list-group-item-action" id="list-messages-list" data-toggle="list" href="/regional_events" role="tab" aria-controls="messages">Региональные</a>
-      <a class="list-group-item list-group-item-action" id="list-profile-list" data-toggle="list" href="/russian_events" role="tab" aria-controls="profile">Всероссийские</a>
-      <a class="list-group-item " id="list-messages-list" data-toggle="list" href="/international_events" role="tab" aria-controls="messages">Mеждународные</a>
+      <a class="list-group-item list-group-item-action" id="list-messages-list" data-toggle="list"  role="tab" aria-controls="messages" onclick="show_int()" name = "tttt">Региональные</a>
+      <a class="list-group-item list-group-item-action" id="list-profile-list" data-toggle="list"  role="tab" aria-controls="profile">Всероссийские</a>
+      <a class="list-group-item " id="list-messages-list" data-toggle="list"  role="tab" aria-controls="messages">Mеждународные</a>
 
     </div>
 
      </div>
+    <li style="list-style-type: none;" >
+              <a href="#" style="padding: 0px" class="" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><strong>Инфо</strong> <span class="caret"></span></a>
+              <ul class="dropdown-menu" style = "padding-left: 15px">
+                  <li> 
+                  </li>
+</ul>
+            </li>
+
+<div class="container" id = "int" style="visibility: hidden">
+                        
+                   {% for ev in int_events %}
+  {{ev}}
+{% endfor %}
+                  
+    </div>
+    <script>
+
+        var show_int = function(){
+    var test = document.getElementById("int")
+    var a  = document.getElementsByName("tttt")
+    test.removeAttribute('style')
+            console.log()
+            }
+    </script>
 {% endblock %}
