--- a/Robocup/Robocup/templates/event_calendar.html
+++ b/Robocup/Robocup/templates/event_calendar.html
@@ -8,9 +8,12 @@ color:#333;    }
 <div class="row">
   <div class="col-4" style="text-align: center; font-size:large;">
     <div class="list-group" id="list-tab" role="tablist">
-      <a class="list-group-item list-group-item-action" id="list-messages-list" data-toggle="list"  role="tab" aria-controls="messages" onclick="show_int()" name = "tttt">Региональные</a>
-      <a class="list-group-item list-group-item-action" id="list-profile-list" data-toggle="list"  role="tab" aria-controls="profile">Всероссийские</a>
-      <a class="list-group-item " id="list-messages-list" data-toggle="list"  role="tab" aria-controls="messages">Mеждународные</a>
+      <a class="list-group-item list-group-item-action" id="list-messages-list" data-toggle="list"  role="tab" aria-controls="messages"onclick="show_reg()" >Региональные</a>
+      <a class="list-group-item list-group-item-action" id="list-profile-list" data-toggle="list"
+         role="tab" aria-controls="profile" onclick="show_rus()">
+          Всероссийские
+        </a>
+      <a class="list-group-item " id="list-messages-list" data-toggle="list"  role="tab" aria-controls="messages" onclick="show_int()" >Mеждународные</a>
 
     </div>
 
@@ -22,21 +25,73 @@ color:#333;    }
                   </li>
 </ul>
             </li>
-
-<div class="container" id = "int" style="visibility: hidden">
+<div class="container">
+<div  id = "int" style="visibility: hidden">
                         
                    {% for ev in int_events %}
   {{ev}}
 {% endfor %}
+    
                   
     </div>
+    
+<div  id = "reg" style="visibility: hidden">
+                        
+                   {% for ev in reg_events %}
+  {{ev}}
+{% endfor %}
+                  
+    </div>
+    
+<div id = "rus" style="visibility: hidden">
+                        
+                   {% for ev in rus_events %}
+  {{ev}}
+{% endfor %}
+                  
+    </div>
+   </div> 
     <script>
+var close_int = function()
+{
+   var int_event = document.getElementById("int")
+   int_event.setAttribute('style', 'display:none')
+}
+var close_reg = function()
+{
+   var int_event = document.getElementById("reg")
+   int_event.setAttribute('style', 'display:none')
+}
+var close_rus = function()
+{
+   var int_event = document.getElementById("rus")
+   int_event.setAttribute('style', 'display:none')
+}
 
-        var show_int = function(){
-    var test = document.getElementById("int")
-    var a  = document.getElementsByName("tttt")
-    test.removeAttribute('style')
-            console.log()
+        var show_int = function()
+        {
+            close_reg();
+            close_rus();
+            var event = document.getElementById("int")
+            event.removeAttribute('style')
+          
+            }
+             var show_reg = function()
+             {  
+             close_int();
+             close_rus();
+             var event = document.getElementById("reg")
+             event.removeAttribute('style')
+             
+            
+            }
+            var show_rus = function()
+            {            
+            close_int();
+            close_reg();
+            var event = document.getElementById("rus")
+            event.removeAttribute('style')
+
             }
     </script>
 {% endblock %}
