--- a/Robocup/Robocup/templates/event_calendar.html
+++ b/Robocup/Robocup/templates/event_calendar.html
@@ -8,23 +8,17 @@ color:#333;    }
 <div class="row">
   <div class="col-4" style="text-align: center; font-size:large;">
     <div class="list-group" id="list-tab" role="tablist">
-      <a class="list-group-item list-group-item-action" id="list-messages-list" data-toggle="list"  role="tab" aria-controls="messages"onclick="show_reg()" >Региональные</a>
+      <a class="list-group-item list-group-item-action" id="list-messages-list" data-toggle="list"  role="tab" aria-controls="messages"onclick="show_reg()" >  Региональные <span class="caret"></span></a>
       <a class="list-group-item list-group-item-action" id="list-profile-list" data-toggle="list"
          role="tab" aria-controls="profile" onclick="show_rus()">
-          Всероссийские
+          Всероссийские <span class="caret"></span>
         </a>
-      <a class="list-group-item " id="list-messages-list" data-toggle="list"  role="tab" aria-controls="messages" onclick="show_int()" >Mеждународные</a>
+      <a class="list-group-item " id="list-messages-list" data-toggle="list"  role="tab" aria-controls="messages" onclick="show_int()" >Mеждународные <span class="caret"></span></a>
 
     </div>
 
      </div>
-    <li style="list-style-type: none;" >
-              <a href="#" style="padding: 0px" class="" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><strong>Инфо</strong> <span class="caret"></span></a>
-              <ul class="dropdown-menu" style = "padding-left: 15px">
-                  <li> 
-                  </li>
-</ul>
-            </li>
+
 <div class="container">
 <div  id = "int" style="visibility: hidden">
                         
