--- a/Robocup/Robocup/templates/layout.html
+++ b/Robocup/Robocup/templates/layout.html
@@ -43,6 +43,7 @@
                 <ul class="nav navbar-nav">
                     <li><a href="/event_calendar">Мероприятия</a></li>
                     <li><a href="{{ url_for('about') }}">О нас</a></li>
+					<li><a href="{{ url_for('archive') }}">Прошедшие мероприятия</a></li>
                     <li class="dropdown">
               <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Лиги <span class="caret"></span></a>
               <ul class="dropdown-menu">
