--- a/Robocup/Robocup/templates/layout.html
+++ b/Robocup/Robocup/templates/layout.html
@@ -25,6 +25,16 @@
       Strong{
           color: #333;
       }
+      .navbar-nav {
+    display:table;
+    width:100%;
+    margin: 0;
+}
+.navbar-nav > li {
+    float:none;
+    display:table-cell;
+    text-align:center;
+}
   </style>
 </head>
 
