--- a/Robocup/Robocup/templates/layout.html
+++ b/Robocup/Robocup/templates/layout.html
@@ -25,16 +25,7 @@
       Strong{
           color: #333;
       }
-      .navbar-nav {
-    display:table;
-    width:100%;
-    margin: 0;
-}
-.navbar-nav > li {
-    float:none;
-    display:table-cell;
-    text-align:center;
-}
+
   </style>
 </head>
 
@@ -50,10 +41,11 @@
                 <a href="/" class="navbar-brand">Robocup Russia</a>
             </div>
             <div class="navbar-collapse collapse">
-                <ul class="nav navbar-nav">
+                <ul class="nav navbar-nav ">
                     <li><a href="/event_calendar">Мероприятия</a></li>
                     <li><a href="{{ url_for('about') }}">О нас</a></li>
 					<li><a href="{{ url_for('archive') }}">Прошедшие мероприятия</a></li>
+                    <li><a href="{{ url_for('archive') }}">Галерея</a></li>
                     <li class="dropdown">
               <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Лиги <span class="caret"></span></a>
               <ul class="dropdown-menu">
