--- a/Robocup/Robocup/templates/admin.html
+++ b/Robocup/Robocup/templates/admin.html
@@ -1,9 +1,12 @@
 {% extends "layout.html" %}
 
 {% block content %}
-<h1>Sign In</h1>
+    {%if ADMIN_RIGHTS%}
+<h1>Добавление мероприятий</h1>
+
 <form action=""  method="post" name="login" enctype="multipart/form-data">
     {{form.hidden_tag()}}
+
     <p >
        Введите название мероприятия<br>
         {{form.EventName(size=80, class_="form-control")}}<br>
@@ -39,4 +42,5 @@
 
     <p><input type="submit" class = "btn btn-primary mb-2" value="Sign In"></p>
 </form>
+ {%endif%}
 {% endblock %}
