--- a/Robocup/Robocup/templates/500.html
+++ b/Robocup/Robocup/templates/500.html
@@ -1,7 +1,6 @@
 {% extends "layout.html" %}
 
 {% block content %}
-    <h1>An unexpected error has occurred</h1>
-    <p>The administrator has been notified. Sorry for the inconvenience!</p>
+    <h1>Ну умер и умер</h1>
     <p><a href="{{ url_for('home') }}">Back</a></p>
 {% endblock %}
