--- a/Robocup/Robocup/templates/export_xlsx.html
+++ b/Robocup/Robocup/templates/export_xlsx.html
@@ -10,7 +10,10 @@
         {{form.League(class_="form-control")}}<br>
     </p>
     
-
+{%if flag%}
+    <script>
+    alert("peshnin pidor dirty)"</script>
+    {%endif%}
 
     <p><input type="submit" class = "btn btn-primary mb-2" value="Sign In"></p>
 </form>
