--- a/Robocup/Robocup/templates/export_xlsx.html
+++ b/Robocup/Robocup/templates/export_xlsx.html
@@ -12,7 +12,8 @@
     
 {%if flag%}
     <script>
-    alert("peshnin pidor dirty)"</script>
+    alert("peshnin pidor dirty")
+    </script>
     {%endif%}
 
     <p><input type="submit" class = "btn btn-primary mb-2" value="Sign In"></p>
