--- a/Robocup/Robocup/templates/export_events_xlsx.html
+++ b/Robocup/Robocup/templates/export_events_xlsx.html
@@ -1,18 +1,18 @@
 {% extends "layout.html" %}
 
 {% block content %}
-<h1>ВЫСЫПАТЕЛЬ 9000</h1>
+<h1>Выгрузка мероприятий</h1>
 <form action=""  method="post" name="login" enctype="multipart/form-data">
     {{form.hidden_tag()}}
     
                 <p>
-       КУДА ВЫСЫПАТЬ???????:<br>
+       Какие мероприятия выгружать?:<br>
         {{form.Rank(class_="form-control")}}<br>
     </p>
     
 {%if flag%}
     <script>
-    alert("В этой категории пока нет мероприятий")
+    alert("В этой категории пока нет мероприятий!")
     </script>
     {%endif%}
 
