--- a/Robocup/Robocup/templates/admin.html
+++ b/Robocup/Robocup/templates/admin.html
@@ -17,7 +17,7 @@
     </p>
             <p>
         Введите город в котором будет проводится мероприятие:<br>
-        {{form.Sity(size=80, class_="form-control")}}<br>
+        {{form.City(size=80, class_="form-control")}}<br>
     </p>
                 <p>
         Введите адрес мероприятия:<br>
