add humanoid template

--- a/Robocup/Robocup/templates/index.html
+++ b/Robocup/Robocup/templates/index.html
@@ -3,25 +3,13 @@
 {% block content %}
 
 <div class="jumbotron">
-    <h1>Robocup Russia</h1>
+    <h1>Robocup Russia committee</h1>
     <p class="lead">Официальный сайт национального комитета RoboСup</p>
 
 </div>
 <br>
-<!--
-<p class="lead"> Календарь мероприятий:</p>
-<br>
 
-<table class="table align-middle">
-    <thead>
-        <tr>
-            <th scope="col"><a href="/regional_events" class="btn btn-primary btn-lg">Региональные</a></th>
-            <th scope="col"><a href="/russian_events" class="btn btn-primary btn-lg">Всероссийские</a></th>
-            <th scope="col"><a href="/international_events" class="btn btn-primary btn-lg">Международные</a></th>
-        </tr>
-    </thead>
-</table>
--->
+
 <div class="slider">
   	<div class="item">
         <img src="/static/img/1.jpg" alt="Первый слайд">
