video mein video

--- a/Robocup/Robocup/templates/humanoid.html
+++ b/Robocup/Robocup/templates/humanoid.html
@@ -6,7 +6,7 @@
             
 <div class="slider">
   	
-        <img src="/static/img/humanoid.jpg" class="img-thumbnail" alt="Первый слайд">
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/TPgRR3HoSDw" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         
     </div>
             <br>
