--- a/Robocup/Robocup/templates/humanoid.html
+++ b/Robocup/Robocup/templates/humanoid.html
@@ -3,12 +3,10 @@
 <div class="jumbotron p-3 p-md-5 text-white rounded bg-dark" style="background-color: white">
         <div class="col-md-6 px-0" style="margin-left: 25%;">
           <h1 class="display-4 font-italic">Robocup Humanoid League</h1>
-            
-<div class="slider">
+
   	
-        <iframe width="560" height="315" src="https://www.youtube.com/embed/TPgRR3HoSDw" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-        
-    </div>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/TPgRR3HoSDw?start=1" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+ 
             <br>
             <br>
           <p class="lead my-3">Multiple lines of text that form the lede, informing new readers quickly and efficiently about what's most interesting in this post's contents.</p>
