--- a/Robocup/Robocup/templates/index.html
+++ b/Robocup/Robocup/templates/index.html
@@ -3,7 +3,7 @@
 {% block content %}
 
 <div class="jumbotron">
-    <h1>Robocup Russia committee</h1>
+    <h1> <img src="/static/img/logo.png" width = "70px" height="70"> Robocup Russian Committee</h1>
     <p class="lead">Официальный сайт национального комитета RoboСup</p>
 
 </div>
