Now you can fix events data, except date

--- a/Robocup/Robocup/templates/admin_panel.html
+++ b/Robocup/Robocup/templates/admin_panel.html
@@ -3,18 +3,18 @@
 <style>A:visited{
 color:#333;    }
 </style>
-<h1 class="lead"> Календарь мероприятий:</h1><br>
+<h1 class="lead"> Панель управления</h1><br>
 <div class="slider">
 <div class="row">
   <div class="col-4" style="text-align: center; font-size:large;">
     <div class="list-group" id="list-tab" role="tablist">
-      <a class="list-group-item list-group-item-action" id="list-messages-list" data-toggle="list"  role="tab" aria-controls="messages" >  Выгрузить мероприятия<span class="caret"></span></a>
+      <a class="list-group-item list-group-item-action" id="list-messages-list" data-toggle="list"  role="tab" aria-controls="messages" href="/export_xlsx_events" >  Выгрузить мероприятия</span></a>
       <a class="list-group-item list-group-item-action" id="list-profile-list" data-toggle="list"
          role="tab" aria-controls="profile" href="/export_xlsx_teams" >
-         Выгурзить команды <span class="caret"></span>
+         Выгурзить команды 
         </a>
-      <a class="list-group-item " href="/event_generator" id="list-messages-list" data-toggle="list"  role="tab" aria-controls="messages" >Добавить мероприятия <span class="caret"></span></a>
-
+      <a class="list-group-item " href="/event_generator" id="list-messages-list" data-toggle="list"  role="tab" aria-controls="messages" >Добавить мероприятия </a>
+ <a class="list-group-item " href="/admin_event_calendar" id="list-messages-list" data-toggle="list"  role="tab" aria-controls="messages" >Изменить / Удалить мероприятия </a>
     </div>
 
 {% endblock %}
