add normal links

--- a/Robocup/Robocup/templates/about.html
+++ b/Robocup/Robocup/templates/about.html
@@ -2,9 +2,79 @@
 
 {% block content %}
 
-<h2>{{ title }}.</h2>
-<h3>{{ message }}</h3>
+<!-- Карточка с card-img-bottom -->
+<table class = "table">
 
-<p>Use this area to provide additional information.</p>
+  <tbody>
+    <tr>
+<th>
+      <td style = "width: 100px"><img src="/static/img/roman.png"></td>
+      <td><h4 style="width: 150px">Председатель</h4>
+          <h5><strong> Роман Мещеряков</strong></h5>
+        Институт проблем управления <br> им. В. А. Трапезникова <br>Российской академии наук</td>
+             <td style = "width: 100px"><img src="/static/img/andrey.png"></td>
+      <td><h4 style="width: 150px">Со-Председатель</h4>
+          <h5><strong> Ронжин Андрей</strong></h5>
+          Санкт-Петербургский институт<br>
+          информатики и автоматизации<br>
+          Российской академии наук</td>
+      </tr>
+ 
+   <tr>
+<th>
+      <td style = "width: 100px"><img src="/static/img/roman.png"></td>
+      <td>
+          <h5><strong> Лариса Коваленко</strong></h5>
+        МГТУ им. Н. Э. Баумана </td>
+              <td style = "width: 100px"><img src="/static/img/andrey.png"></td>
+      <td>
+          <h5><strong> Ринат Галин</strong></h5>
+        Институт проблем управления <br>
+          им. В. А. Трапезникова <br>
+          Российской академии наук</td>
+      </tr>
+         <tr>
+<th>
+      <td style = "width: 100px"><img src="/static/img/shandarov.png"></td>
+      <td>
+          <h5><strong>Евгений Шандаров</strong></h5>
+        Томский государственный университет<br>
+          управления и электроники </td>
+              <td style = "width: 100px"><img src="/static/img/vyachslav.png"></td>
+      <td>
+          <h5><strong>Вячеслав Пшихопов</strong></h5>
+
+         Южный федеральный университет</td>
+      </tr>
+         <tr>
+<th>
+      <td style = "width: 100px"><img src="/static/img/lev.png"></td>
+      <td>
+          <h5><strong>Лев Станкевич</strong></h5>
+             Санкт-Петербуржский<br>
+             Политехнический университет</td>
+              <td style = "width: 100px"><img src="/static/img/oleg.png"></td>
+      <td>
+          <h5><strong>Олег Шмаков</strong></h5>
+          Центральный научно-исследовательский <br>
+          и опытно-конструкторский институт<br>
+          робототехники и технической кибернетикик</td>
+      </tr>
+         <tr>
+<th>
+      <td style = "width: 100px"><img src="/static/img/vladimir.png"></td>
+      <td>
+          <h5><strong>Владимир Павловский</strong></h5>
+        Институт прикладной математики<br>
+          имени М. В. Келдыша<br>
+        Российской академии наук</td>
+              <td style = "width: 100px"><img src="/static/img/sergey.png"></td>
+      <td>
+          <h5><strong>Сергей Филипов</strong></h5>
+        Презедентский физико-математический <br>
+          лицей №239<br>
+
+      </tr>
+      
 
 {% endblock %}
