--- a/Robocup/Robocup/templates/layout.html
+++ b/Robocup/Robocup/templates/layout.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>{{ title }} - My Flask Application</title>
+    <meta name="yandex-verification" content="9632c89f11c782d1" />
+    <title>Robocup Russia Committee</title>
     <link rel="stylesheet" type="text/css" href="/static/content/bootstrap.min.css" />
     <link rel="stylesheet" type="text/css" href="/static/content/site.css" />
     <link rel="stylesheet" type="text/css" href="/static/content/slider.css" />
