--- a/Robocup/Robocup/templates/refree_cabinet.html
+++ b/Robocup/Robocup/templates/refree_cabinet.html
@@ -1,21 +1,25 @@
+
 {% extends "layout.html" %}
 
 {% block content %}
+<h1>Авторизация</h1>
 <div class="r-sidebar">
+<form action=""  method="post" name="login" enctype="multipart/form-data">
+    {{form.hidden_tag()}}
+    
 				<div class="r-sidebar-item">
-					<!-- Sidebar Image -->
+		
 					<div class="img">
 						<a href="ui-304.html#"><img src="img/ui-304/user.jpg" alt="" class="img-responsive"></a>
 					</div>
-					<!-- Name -->
+			
 					<div class="name">
 						<h3>{{refree.name}}</h3>
 
 					</div>
 					<div class="clearfix"></div>
 				</div>
-				<!-- Detail -->
-				<div class="r-detail">
+    				<div class="r-detail">
 					<table>	
 						<tbody><tr>
 							<th>Имя</th>
@@ -29,17 +33,19 @@
 							<th>Эл.почта</th>
 							<td>{{refree.email}}</td>
 						</tr>
-						<tr>
-							<th>Лига судейства</th>
-							<td>{{form.League}}</td>
+                       						<tr>
+							<th>Текущая лига</th>
+							<td>{{form.League(class_="form-control")}}</td>
+						</tr>     
 
-						</tr>
 					</tbody></table>
-                    <form action=""  method="post" name="login" enctype="multipart/form-data">
-    {{form.hidden_tag()}}
-                        <p><input type="submit" class = "btn btn-primary mb-2" value="Sign In"></p>
-</form>
+
 				</div>
 
 
+    
+
+    <p><input type="submit" class = "btn btn-primary mb-2" value="Sign In"></p>
+</form>
+</div>
 {% endblock %}
